--- a/content/post/github-pages-uber.org
+++ b/content/post/github-pages-uber.org
@@ -18,11 +18,9 @@ All posts here will have the category set to /uber/.
 
 As Uber loses more money, CEO Dara Khosrowshahi continues cross his fingers and dream.
 
-# more
+Uber [[https://investor.uber.com/news-events/news/press-release-details/2021/Uber-Announces-Results-for-Fourth-Quarter-and-Full-Year-2020/default.aspx][just announced]] its Q4 2020 earnings on February 10: a net loss of $968 million, or an "Adjusted EBITDA loss of $(454) million".
 
-Uber [[https://investor.uber.com/news-events/news/press-release-details/2021/Uber-Announces-Results-for-Fourth-Quarter-and-Full-Year-2020/default.aspx][just announced]] its Q4 2020 earnings on February 10: a net loss of $968 million in the quarter, or an "Adjusted EBITDA loss of $(454) million".
-
-Here's Uber's revenue (blue), profitability (orange) and also number of trips (green).
+Here's Uber's revenue (blue), profitability (orange) and number of trips (green).
 
 [[file:~/src/academic-kickstart/content/post/img/uber-earnings-2020-q4.png]]
 
